:lipstick: Refs #731 - Fix z-index

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -38,7 +38,9 @@ li.nav-item {
   }
 }
 
-.formio-dialog {
+.formio-dialog,
+.ck-body .ck.ck-balloon-panel
+{
   z-index: 10000000;
 }
 
